# Copyright 2016 Google Inc. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#==============================================================================

import("//third_party/protobuf/proto_library.gni")

proto_library("feature_extractor_proto") {
  sources = [
    "feature_extractor.proto",
  ]
}

proto_library("sentence_proto") {
  sources = [
    "sentence.proto",
  ]
}

proto_library("task_spec_proto") {
  sources = [
    "task_spec.proto",
  ]
}

static_library("base") {
  sources = [
    "base.cc",
    "base.h",
  ]
}

static_library("embedding_feature_extractor") {
  sources = [
    "embedding_feature_extractor.cc",
    "embedding_feature_extractor.h",
  ]
  deps = [
    ":base",
    ":feature_extractor",
    ":task_context",
    ":utils",
    ":workspace",
  ]
}

static_library("embedding_network") {
  sources = [
    "embedding_network.cc",
    "embedding_network.h",
  ]
  deps = [
    ":base",
    ":embedding_network_params",
    ":feature_extractor",
    ":simple_adder",
    ":task_context_params",
  ]
}

source_set("embedding_network_params") {
  sources = [
    "embedding_network_params.h",
  ]
  deps = [
    ":base",
    ":float16",
  ]
}

static_library("feature_extractor") {
  sources = [
    "feature_extractor.cc",
    "feature_extractor.h",
  ]
  public_deps = [
    "//third_party/protobuf:protobuf_lite",
  ]
  deps = [
    ":base",
    ":feature_extractor_proto",
    ":feature_types",
    ":fml_parser",
    ":registry",
    ":task_context",
    ":utils",
    ":workspace",
    "//third_party/cld_3/src/src/script_span:stringpiece",
  ]
}

static_library("feature_types") {
  sources = [
    "feature_types.cc",
    "feature_types.h",
  ]
  deps = [
    ":base",
  ]
}

source_set("float16") {
  sources = [
    "casts.h",
    "float16.h",
  ]
  deps = [
    ":base",
  ]
}

static_library("fml_parser") {
  sources = [
    "fml_parser.cc",
    "fml_parser.h",
  ]
  public_deps = [
    "//third_party/protobuf:protobuf_lite",
  ]
  deps = [
    ":base",
    ":feature_extractor_proto",
    ":utils",
  ]
}

static_library("language_identifier_features") {
  sources = [
    "language_identifier_features.cc",
    "language_identifier_features.h",
  ]
  public_deps = [
    "//third_party/protobuf:protobuf_lite",
  ]
  deps = [
    ":base",
    ":feature_extractor",
    ":feature_types",
    ":sentence_features",
    ":sentence_proto",
    ":task_context",
    ":utils",
    ":workspace",
  ]
}

static_library("lang_id_nn_params") {
  sources = [
    "lang_id_nn_params.cc",
    "lang_id_nn_params.h",
  ]
  deps = [
    ":base",
    ":embedding_network_params",
    ":float16",
  ]
}

static_library("nnet_language_identifier") {
  sources = [
    "nnet_language_identifier.cc",
    "nnet_language_identifier.h",
  ]
  public_deps = [
    "//third_party/protobuf:protobuf_lite",
  ]
  deps = [
    ":base",
    ":embedding_feature_extractor",
    ":embedding_network",
    ":lang_id_nn_params",
    ":language_identifier_features",
    ":sentence_features",
    ":sentence_proto",
    ":task_context",
    ":task_context_params",
    ":task_spec_proto",
    ":workspace",
    "//third_party/cld_3/src/src/script_span:script_span",
  ]
}

static_library("registry") {
  sources = [
    "registry.cc",
    "registry.h",
  ]
  deps = [
    ":base",
  ]
}

static_library("sentence_features") {
  sources = [
    "sentence_features.cc",
    "sentence_features.h",
  ]
  public_deps = [
    "//third_party/protobuf:protobuf_lite",
  ]
  deps = [
    ":feature_extractor",
    ":registry",
    ":sentence_proto",
  ]
}

source_set("simple_adder") {
  sources = [
    "simple_adder.h",
  ]
  deps = [
    ":base",
  ]
}

static_library("task_context") {
  sources = [
    "task_context.cc",
    "task_context.h",
  ]
  public_deps = [
    "//third_party/protobuf:protobuf_lite",
  ]
  deps = [
    ":base",
    ":task_spec_proto",
    ":utils",
  ]
}

static_library("task_context_params") {
  sources = [
    "task_context_params.cc",
    "task_context_params.h",
  ]
  public_deps = [
    "//third_party/protobuf:protobuf_lite",
  ]
  deps = [
    ":base",
    ":task_context",
    ":task_spec_proto",
  ]
}

static_library("utils") {
  sources = [
    "utils.cc",
    "utils.h",
  ]
  deps = [
    ":base",
  ]
}

static_library("workspace") {
  sources = [
    "workspace.cc",
    "workspace.h",
  ]
  deps = [
    ":base",
  ]
}

executable("language_identifier_main") {
  sources = [
    "language_identifier_main.cc",
  ]
  deps = [
    ":base",
    ":nnet_language_identifier",
  ]
}
