# Copyright 2016 Google Inc. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#==============================================================================

# TODO(abakalov): The code in script_span was copied from CLD2. It can be
# simplified and cleaned up.

static_library("script_span") {
  sources = [
    "fixunicodevalue.cc",
    "fixunicodevalue.h",
    "generated_entities.cc",
    "generated_ulscript.cc",
    "generated_ulscript.h",
    "getonescriptspan.cc",
    "getonescriptspan.h",
    "integral_types.h",
    "offsetmap.cc",
    "offsetmap.h",
    "port.h",
    "utf8acceptinterchange.h",
    "utf8prop_lettermarkscriptnum.h",
    "utf8scannot_lettermarkspecial.h",
    "utf8statetable.cc",
    "utf8statetable.h",
  ]
  deps = [
    ":stringpiece",
  ]
}

source_set("stringpiece") {
  sources = [
    "stringpiece.h",
  ]
}
